--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -34,12 +34,31 @@
   border: 1px solid rgba(0,0,0,.125);
   border-radius: 0.25rem;
 }
-.card:hover{
+.card1 {
+
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 16px;
+  margin-bottom: 50px;
+  position: relative;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  flex-direction: row;
+  flex-wrap: wrap;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid rgba(0,0,0,.125);
+  border-radius: 0.25rem;
+  height: 27rem;
+}
+.card1:hover{
   border-left: 8px solid #4979ff;
 }
 .cardImg
 {
-  width: 100%;
+  width: 70%;
 }
 
 .cardText
